# philo

./: CMakeLists.txt  Makefile  get_timestamp_ms.c  init_functions.c  is_finished.c  main.c  monitoring_routine.c  philo  philo.h  philo_routine.c  sleep_ms.c  start_philos.c
init_functions/: init_data.c  init_forks.c  init_philos.c  start_philos.c
philo_actions/: drop_forks.c  eat_kebab.c  take_forks.c  take_nap.c  think.c
routines/: monitoring_routine.c  philo_routine.c
utils/: clear_table.c  ft_atoi.c  get_timestamp_ms.c  is_finished.c  print_status.c  sleep_ms.c
